--- a/style.css
+++ b/style.css
@@ -2,89 +2,24 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "plain light";
-    color: var(--secondary);
 }
 
 html,
 body {
     height: 100%;
     width: 100%;
+    overflow-x: hidden;
+    font-family: main;
 }
 
-
-
-:root {
-	font-size: 16px;
-}
-
-body {
-	margin: 0;
-	--color-text: #fff;
-	--color-bg: #111;
-	--color-link: #aaa;
-	--color-link-hover: #fff;
-	--color-alt: #7f6a57;
-	color: var(--color-text);
-	background-color: var(--color-bg);
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-	counter-reset: contentSection;
-	font-family: neuzeit-grotesk, sans-serif;
-}
-
-/* Page Loader */
-.js .loading::before,
-.js .loading::after {
-	content: '';
-	position: fixed;
-	z-index: 1000;
-}
-
-.js .loading::before {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: var(--color-bg);
-}
-
-.js .loading::after {
-	top: 50%;
-	left: 50%;
-	width: 60px;
-	height: 60px;
-	margin: -30px 0 0 -30px;
-	border-radius: 50%;
-	opacity: 0.4;
-	background: var(--color-link);
-	animation: loaderAnim 0.7s linear infinite alternate forwards;
-
-}
-
-@keyframes loaderAnim {
-	to {
-		opacity: 1;
-		transform: scale3d(0.5,0.5,1);
-	}
-}
-
-a {
-	text-decoration: underline;
-	color: var(--color-link);
-	outline: none;
-}
-
-a:hover,
-a:focus {
-	color: var(--color-link-hover);
-	outline: none;
-	text-decoration: none;
+@font-face {
+    font-family: rv;
+    src: url("fonts/1f90f94c17909f8555b5.ttf");
 }
 
 main {
-	overflow: hidden;
 	position: relative;
+    font-family: rv;
 }
 
 .frame {
@@ -425,7 +360,6 @@ main {
 	margin-left: 1rem;
 }
 
-/*! locomotive-scroll v3.5.4 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
 	overflow: hidden; 
 }
@@ -569,4 +503,23 @@ html.has-scroll-dragging {
     width: 100vw;
     height: 100vh;
     background-color: rgb(170, 94, 191);
+}
+@font-face {
+    font-family:rv ;
+    src: url("./fonts/icomoon.ttf");
+}
+@font-face {
+    font-family: rv2;
+    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
+}
+@font-face {
+    font-family: rv3;
+    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
+}
+@font-face {
+    font-family: rv4;
+    src: url("./fonts/TomatoGrotesk-Medium.BzqDELbt.ttf");
+}
+h2{
+    font-family: rv4!important;
 }
