--- a/style.css
+++ b/style.css
@@ -2,8 +2,28 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+	font-family: rv2;
 }
-
+@font-face {
+    font-family:rv ;
+    src: url("./fonts/icomoon.ttf");
+}
+@font-face {
+    font-family: rv2;
+    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
+}
+@font-face {
+    font-family: rv3;
+    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
+}
+@font-face {
+    font-family: rv4;
+    src: url("./fonts/TomatoGrotesk-Medium.BzqDELbt.ttf");
+}
+@font-face {
+    font-family: rv5;
+    src: url("./fonts/Freudian\ One\ Demo.ttf");
+}
 html,
 body {
     height: 100%;
@@ -24,6 +44,12 @@ body {
     gap: 2px;
     position: relative;
 }
+#loader video{
+	width: 30%;
+	height: 10vh;
+	object-position: center;
+	object-fit: cover;
+}
 
 #loader{
 	width: 100%;
@@ -38,9 +64,10 @@ body {
 	width: 100%;
 	height: 100vh;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	background: #555;
+	background: #232323;
 }
 #loader #insideloader #line{
 	width: 60vh;
@@ -581,6 +608,7 @@ html.has-scroll-dragging {
    /* position:fixed; */
 	height: 10vh;
 	position: absolute;
+	display: none;
 	top: 0;
 	left: 0;
 	/* background-color: red; */
@@ -943,26 +971,7 @@ html.has-scroll-dragging {
     height: 100vh;
     background-color: rgb(170, 94, 191);
 }
-@font-face {
-    font-family:rv ;
-    src: url("./fonts/icomoon.ttf");
-}
-@font-face {
-    font-family: rv2;
-    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
-}
-@font-face {
-    font-family: rv3;
-    src: url("./fonts/KFOlCnqEu92Fr1MmEU9fBBc4AMP6lQ.ttf");
-}
-@font-face {
-    font-family: rv4;
-    src: url("./fonts/TomatoGrotesk-Medium.BzqDELbt.ttf");
-}
-@font-face {
-    font-family: rv5;
-    src: url("./fonts/Freudian\ One\ Demo.ttf");
-}
+
 h2{
     font-family:rv4, Arial, sans-serif!important;
     /* font-weight: 800; */
@@ -1871,7 +1880,8 @@ p{
 	flex-direction: column;
 	align-items: top;
 	justify-content: space-evenly;
-	margin-top: -10vh;
+	margin-top: -8vh;
+	margin-left: -15vh!important;
 
 }
 #page-part3-left img {
@@ -1889,7 +1899,7 @@ p{
 
 #page-part3-cir {
 	width: 6vw;
-	margin-left: -15.5vh;
+	margin-left: -26vh!important;
 	height: 100%;
 	/* background-color: red; */
 }
